<resources>
    <string name="app_name">PasswordManager</string>
    <string name="create_vault">Create vault</string>
    <string name="unlock_vault">Unlock vault</string>
    <string name="master_password">Master password</string>
    <string name="master_password_again">Master password again</string>
    <string name="add_name">Name</string>
    <string name="add_username">Username</string>
    <string name="add_url">URL</string>
    <string name="add_notes">Notes</string>
    <string name="add_password">Password</string>
    <string name="create_vault_headline">FelipePass...</string>
    <string name="empty_name_text">The Name field is required.</string>
    <string name="error_dialog">"An error has occurred."</string>
    <string name="warning">"Warning!"</string>
    <string name="password_exposed">"The password has been found in data breaches. You should change it."</string>
    <string name="hello_blank_fragment">Vault fragment</string>
    <string name="notice">Notice</string>
    <string name="password_no_exposed">The password was not found in any known data breaches. It should be safe to use.</string>
    <string name="min_length">Minimal password length is at least 8 characters!!</string>
    <string name="space_password">Password cannot contain space!!</string>
    <string name="number_password">Password must contain at least one digit character!!</string>
    <string name="special_password">Password must contain at least one special character!!</string>
    <string name="letter_lower_password">Password must contain at least one lower case character!!</string>
    <string name="letter_upper_password">Password must contain at least one upper case character!!</string>
    <string name="match_passwords">Passwords do not match!!</string>
    <string name="no_passwords">Enter the master password!!</string>
    <string name="add_item">Add item</string>
    <string name="view_item">View Item</string>
    <string name="edit_item_headline">Edit Item</string>
    <string name="save_item">Save</string>
    <string name="cancel">Cancel</string>
    <string name="added_item">New item created.</string>
    <string name="delete_popup">Delete</string>
    <string name="edit_item">Edit</string>
    <string name="item_created">New item created.</string>
    <string name="empty_password">Password input is empty!</string>
    <string name="delete_database_notice">Database has been deleted!</string>
    <string name="copy_password">Password has been copied.</string>
    <string name="no_internet">Password exposure in a data breach cannot be checked because no internet connection.</string>
    <string name="item_updated">Item updated.</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="delete_database">Delete database</string>
    <string name="delete_database_dialog">Deleting the database cannot be undone. Are you sure you want to continue?</string>
    <string name="empty_vault">The vault is empty.</string>
</resources>