<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayoutDetail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000000"
        android:gravity="left"
        android:clickable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="70dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textSize="16sp"></TextView>
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/view_item"
            android:textStyle="bold"
            android:layout_marginLeft="50dp"
            android:textSize="18sp"></TextView>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputDetail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:helperText="Required">


        <EditText
            android:id="@+id/nameDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/add_name"
            android:textColor="#d3d3d3"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputDetail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299">


        <EditText
            android:id="@+id/usernameDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:ems="10"
            android:textColor="#d3d3d3"
            android:hint="@string/add_username"
            android:inputType="text"
            android:maxLength="25"
            android:maxLines="1"
            android:textSize="20sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextDetail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/add_password"
            android:textColor="#d3d3d3"
            android:inputType="textPassword"
            android:maxLength="45"
            android:maxLines="1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/urlTextInputDetail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624">


        <EditText
            android:id="@+id/urlDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/add_url"
            android:inputType="textUri"
            android:maxLength="25"
            android:textColor="#d3d3d3"
            android:maxLines="1"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layoutDetail"
        style="@style/Theme.App.Base"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:hint="@string/add_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:expandedHintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notesDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="textMultiLine"
            android:ems="10"
            android:textColor="#d3d3d3"
            android:maxLines="5"
            android:gravity="top"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

